# Mentors

./: .gitignore  AGENTS.md  README.md  onboarding.md  test_llm_client_embed.py
backend/: .env.example  .gitignore  AGENTS.md  README.md  SETUP.md  dev_server.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260508_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  chat.py  curriculum.py  level.py  mentor.py  news.py  report.py  user.py
backend/app/repositories/: chat_repository.py  curriculum_repository.py  mentor_repository.py  news_repository.py  user_repository.py
backend/app/schemas/: chat.py  common.py  curriculum.py  mentor.py  news.py  onboarding.py  report.py
backend/app/seed/: seed_data.py
backend/app/services/: chat_service.py  onboarding_service.py  report_service.py
backend/core/: config.py  mentor_catalog.py
backend/core/ai_pipeline/: __init__.py  citation.py  critic.py  guardrail.py  hallucination.py  news_search.py  rag.py  tier_overlay.py
backend/core/auth/: __init__.py  dependencies.py  jwt.py  models.py  oauth_google.py  router.py
backend/core/cache/: __init__.py  cache.py
backend/core/contracts/: __init__.py  enums.py  events.py  ids.py
backend/core/db/: __init__.py  session.py
backend/core/event_bus/: __init__.py  bus.py
backend/docs/: 1주차_인수인계서.md  debate.md  growth.md  learning_curriculum_plan.md  learning_dataflow.md  learning_growth.md  learning_growth_testing.md  onboarding.md  settings_onboarding_postman_testing.md  모듈_다이어그램.html  요구분석서_v5.docx  인수인계_시각자료.html  코어인프라_설계명세서.md
backend/features/: router.py  service.py
backend/migrations/: README.md  env.py
backend/postman/: learning-growth-local.postman_collection.json  learning-growth-local.postman_environment.json  settings-onboarding-local.postman_collection.json  settings-onboarding-local.postman_environment.json
backend/scripts/: debate_smoke.py
backend/tests/: conftest.py
llm/: __init__.py  (+3 more)
(+318 files in other folders)
